--- a/Abutment.ipynb
+++ b/Abutment.ipynb
@@ -453,12 +453,12 @@
    "id": "f12dfbbd",
    "metadata": {},
    "source": [
-    "Braking"
+    "Braking Forces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "34d5d0a5",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "a616f598",
    "metadata": {},
    "outputs": [
@@ -505,8 +505,8 @@
        "    <tr>\n",
        "      <th>Braking load</th>\n",
        "      <td>221.6</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>376.72</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>1817.12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -514,7 +514,7 @@
       ],
       "text/plain": [
        "              Force(KN)  Lever arm(m)  Moment(KNm)\n",
-       "Braking load      221.6           1.7       376.72"
+       "Braking load      221.6           8.2      1817.12"
       ]
      },
      "metadata": {},
@@ -522,18 +522,174 @@
     }
    ],
    "source": [
-    "\n",
     "F = [1*wt_70r*factor, 2*classa_wt*factor]\n",
-    "la = pt+abut['tota']\n",
+    "la = pt+abut['total_ht']\n",
     "m = max(F)*la\n",
-    "A3 = pd.DataFrame({'Force(KN)':max(F), 'Lever arm(m)':la,'Moment(KNm)':m}, index = ['Braking load'])\n",
-    "display(A3)"
+    "A4 = pd.DataFrame({'Force(KN)':max(F), 'Lever arm(m)':la,'Moment(KNm)':m}, index = ['Braking load'])\n",
+    "display(A4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa7116f",
+   "metadata": {},
+   "source": [
+    "Temperature Forces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a54b2055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_var = 30 #Temperature variation in degree celsius\n",
+    "alp = 0.000012 #Coefficient of thermal expansion in m/deg. c/m\n",
+    "l = box['span'] #span of bridge\n",
+    "shr_str = 0.0002 #Strain due to shrinkage.\n",
+    "th_el = temp_var*alp*l #Thermal elongation in m.\n",
+    "shr_el = l*shr_str #Shrinkage elongation in m.\n",
+    "tot = (th_el+shr_el)/2 #Total elongation in m.\n",
+    "shr_rt = 1000 #Shear rating of elastomer bearing in KN/m/m^2\n",
+    "arb = 0.235644 #Area of bearing in m^2.\n",
+    "htb = 0.0340 #Height of bearing in m.\n",
+    "no = 3 #Number of bearings.\n",
+    "f = 1.1*tot*(shr_rt*arb)/htb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b0c61299",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Force(KN)</th>\n",
+       "      <th>Lever arm(m)</th>\n",
+       "      <th>Moment(KNm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Temperature force</th>\n",
+       "      <td>320.198612</td>\n",
+       "      <td>4.475</td>\n",
+       "      <td>1432.888788</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Force(KN)  Lever arm(m)  Moment(KNm)\n",
+       "Temperature force  320.198612         4.475  1432.888788"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "frc = 3*f\n",
+    "La = abut['stem_ht']+abut['cap']+bearing_ht\n",
+    "A5 = pd.DataFrame({'Force(KN)':frc, 'Lever arm(m)':La,'Moment(KNm)': (frc*La)}, index = ['Temperature force'])\n",
+    "display(A5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b6c997a",
+   "metadata": {},
+   "source": [
+    "Live Load Surcharge as per clause 214.1.1.3 of IRC 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d25f59f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Force(KN)</th>\n",
+       "      <th>Lever arm(m)</th>\n",
+       "      <th>Moment(KNm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Force due to LL surcharge</th>\n",
+       "      <td>357.211411</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>833.493293</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Force(KN)  Lever arm(m)  Moment(KNm)\n",
+       "Force due to LL surcharge  357.211411      2.333333   833.493293"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "h = 1.2 \n",
+    "Pr = ka(alpha, beta, delta, phi)*h*unitwt_bfill #Horizontal pressure \n",
+    "A6 = pd.DataFrame({'Force(KN)':(Pr*abut['width_of_abut']*(abut['total_ht']-abut['approach_slab_dep'])), 'Lever arm(m)':abut['total_ht']/3,'Moment(KNm)':((Pr*abut['width_of_abut']*(abut['total_ht']-abut['approach_slab_dep']))*abut['total_ht']/3)}, index = ['Force due to LL surcharge'])\n",
+    "display(A6)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "208c1a5b",
+   "id": "fe6a7dc1",
    "metadata": {},
    "outputs": [],
    "source": []
